--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseURL: "https://arkalim.org"
+baseURL: ""
 languageCode: en-us
-title: Abdur Rahman
+title: Jalal EL HARDA
 theme: PaperMod
 
 menu:
@@ -48,9 +48,9 @@ params:
   # Home Page
   profileMode:
     enabled: true
-    title: "Abdur Rahman"
-    subtitle: Hi 👋! I'm Abdur, an ambitious DevOps Intern at [**16Bit.ai**](https://www.16bit.ai), an innovative healthcare startup in Toronto. Currently pursuing my [**MSc in Applied Computing**](https://mscac.utoronto.ca/) at the esteemed University of Toronto, I bring a solid foundation in Software Engineering with professional experience. I am captivated by the realm of Cloud Computing and DevOps practices, seeking to revolutionize how we deploy applications in the modern era. To enhance my expertise, I have also obtained AWS associate-level certifications as a Solutions Architect and Developer, further bolstering my skills in the cloud computing domain. My unwavering curiosity and drive push me to explore fresh avenues to redefine technological frontiers. During my leisure hours, I channel my creativity into crafting engaging YouTube 🎬 videos, where I share my journey as an international student in Canada 🇨🇦.
-    imageUrl: "home/formal-pic-small.jpeg"
+    title: "Hi👋!"
+    subtitle: I'm Jalal Eddine, a dedicated SysAdmin holding certifications in Microsoft Azure (Entra ID) and Microsoft 365. Currently excelling in my role at Sully Group, I leverage a robust foundation in System Administration to ensure resilient IT infrastructure. My commitment to staying ahead in the dynamic tech landscape is evident through continuous learning and certifications. Beyond work, I express my passion for technology through impactful content creation, sharing insights into the ever-evolving realm of system administration. 🚀💻
+    imageUrl: "home/Jalal.png"
     imageWidth: 220
     imageHeight: 220
     # buttons:
