--- a/config.yaml
+++ b/config.yaml
@@ -25,10 +25,10 @@ menu:
       name: Search
       url: /search
       weight: 50
-    # - identifier: tags
-    #   name: Tags
-    #   url: /tags
-    #   weight: 60
+    - identifier: tags
+      name: Tags
+      url: /tags
+      weight: 60
     # - identifier: notes
     #   name: Notes
     #   url: https://notes.arkalim.org
@@ -49,7 +49,7 @@ params:
   profileMode:
     enabled: true
     title: "Hi👋!"
-    subtitle: I'm <b>Jalal Eddine</b>, a dedicated SysAdmin holding certifications in Microsoft Azure (Entra ID) and Microsoft 365. Currently excelling in my role at Sully Group, I leverage a robust foundation in System Administration to ensure resilient IT infrastructure. My commitment to staying ahead in the dynamic tech landscape is evident through continuous learning and certifications. Beyond work, I express my passion for technology through impactful content creation, sharing insights into the ever-evolving realm of system administration. 🚀💻
+    subtitle: I'm <b>Jalal Eddine</b>, a dedicated SysAdmin with certifications in Microsoft Azure (Entra ID) and Microsoft 365. Doing well at Sully Group, I use my strong skills in system administration to keep our IT setup strong. I'm always learning and getting certifications to stay updated in the fast-changing tech world. Outside of work, I share techie stuff through content creation, talking about what's happening in system administration. 🚀💻
     imageUrl: "home/Jalal.png"
     imageWidth: 240
     imageHeight: 240
