--- a/config.yaml
+++ b/config.yaml
@@ -15,11 +15,13 @@ menu:
       weight: 20
     - identifier: projects
       name: Projets
+      title: Projets
       url: /projects
       weight: 30
     - identifier: experience
-      name: Experience
-      url: /experience
+      name: Experiences
+      title: Expériences
+      url: /experiences
       weight: 40
     - identifier: tags
       name: Tags
