--- a/config.yaml
+++ b/config.yaml
@@ -50,7 +50,7 @@ params:
   profileMode:
     enabled: true
     title: "Hello👋!"
-    subtitle: Je suis <b>Jalal</b>, un Administrateur Systèmes et Réseaux fort de 13 années d'expérience, titulaire de certifications en Microsoft Azure (Entra ID) et Microsoft 365. Toujours avide d'apprendre et de décrocher de nouvelles certifications, je m'efforce de demeurer à la pointe dans un univers technologique en perpétuelle évolution. En dehors de mes fonctions, je partage mes connaissances techniques en créant du contenu, explorant ainsi les dernières tendances en matière d'administration système. 🚀💻
+    subtitle: Je suis <b>Jalal</b>, un Administrateur Systèmes et Réseaux avec 13 ans d’expérience, certifié en Microsoft 365 et SCCM. Curieux et motivé par l'apprentissage continu, je reste à l'affût des évolutions technologiques pour garantir des environnements optimisés et sécurisés. En parallèle, je partage mes compétences en créant du contenu technique, contribuant activement à la communauté IT. 🚀💻
     imageUrl: "home/Jalal.png"
     imageWidth: 240
     imageHeight: 240
